Fixed Shipping Section Spacing
removed <br /> tags and used display: grid.

--- a/src/styles.css
+++ b/src/styles.css
@@ -289,6 +289,10 @@ img {
   display: flex;
 }
 
+.shippingSection {
+  display: grid;
+}
+
 /* Responsive Styles */
 @media screen and (max-width: 767px) {
   .detailWrapper {
